Run with MacOS addes right path with mediaplayer-path
Change "zurrück" to "zurück"