@@ -4,6 +4,9 @@ Battlehips game with ai and network
 MacOS 10.15.1 VM Options:
 --module-path="/Library/Java/JavaVirtualMachines/javafx-sdk-11.0.2/lib/" --add-modules=javafx.controls,javafx.fxml
 
+
+Alternative :
+--module-path="/Library/Java/JavaVirtualMachines/javafx-sdk-11.0.2/lib/" --add-modules=javafx.media,javafx.graphics,javafx.controls,javafx.fxml,javafx.base
 ## Inbetriebnahme
 
 Vm-Option: --module-path /home/josua/Documents/JavaFX/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml -Djdk.gtk.version=2
